# rustydb

./: Cargo.toml  README.MD
benches/: query_benchmarks.rs
examples/: api_client.rs  basic_usage.rs
src/: lib.rs  main.rs
src/domain/entity/: column.rs  data_type.rs  mod.rs  table.rs  value.rs
src/domain/repository/: mod.rs  table_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/parser/: mod.rs  sql_parser.rs
src/infrastructure/repository/: memory_repository.rs  mod.rs
src/infrastructure/storage/: memory.rs  mod.rs
src/interface/: mod.rs
src/interface/api/: handler.rs  mod.rs  server.rs
